--- a/src/app/kalender.component.html
+++ b/src/app/kalender.component.html
@@ -38,3 +38,4 @@
   <p>{{buli_status}}</p>  
 </div>
 <button md-raised-button (click)="writeNewBuchung()" id="neueFreigabeButton">writeNewBuchung()</button>
+<button md-raised-button (click)="writeNewUser()" >writeNewUser()</button>
