--- a/src/app/buchungen/buchungen.component.html
+++ b/src/app/buchungen/buchungen.component.html
@@ -10,29 +10,28 @@
     </p-accordionTab>
 </p-accordion-->
 <div class="centered-content">
-  <h3>Vermietungen</h3>
+  <h3>Übersicht Buchungen</h3>
 </div>
 
-<button md-raised-button (click)="onGoButton()">Daten laden!</button>    
-<br>
 <div class="centered-content">
   <md-select placeholder="Jahr" [(ngModel)]="myYear" (change)="onYearChanged()">    
     <md-option *ngFor="let year of yearValues" [value]="year">{{year}}</md-option>  
   </md-select>
 
   <md-select placeholder="Monat" [(ngModel)]="myMonth" (change)="onMonthChanged()">    
-    <md-option *ngFor="let month of monthValues" [value]="month">{{month}}</md-option>  
+    <md-option *ngFor="let month of monatNamen" [value]="month">{{month}}</md-option>  
   </md-select>
+
+  <button md-raised-button (click)="onGoButton()"><i class="fa fa-search"  style="color: #3f51b5"></i></button>    
 </div>
 <br>
 <div class="row columns">
   
     <table>
-      <tr><th>Datum</th><th>MieterId (muss noch Email)</th><th>Zahlung erhalten></th></tr>
-      <tr *ngFor="let i of buchungValues">                
-        <td>{{i.dateString}}</td>
-        <td>{{i.mieter}}</td>
-        <td><input type="checkbox" value ={{i.erhalten}}></td>
+      <tr><th>Datum</th><th>MieterId (muss noch Email)</th></tr>
+      <tr *ngFor="let i of buchungsArray">                
+        <td>{{i.datum}}</td>
+        <td>{{i.text}}{{i.mId}}</td>        
       </tr>
     </table>  
   </div>
