--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -13,9 +13,9 @@
 }
 
 .yellow {
-  background-color: #de4e4e;
+  background-color: #FFC107;
   border-radius: 4px;
   transition: background-color 0.3s;
-  color: yellow;
+  color: white;
 }
 
