--- a/src/app/buchungen/buchungen.component.html
+++ b/src/app/buchungen/buchungen.component.html
@@ -28,10 +28,10 @@
 <div class="row columns">
   
     <table>
-      <tr><th>Datum</th><th>MieterId (muss noch Email)</th></tr>
+      <tr><th>Datum</th><th>Kontakt</th></tr>
       <tr *ngFor="let i of buchungsArray">                
         <td>{{i.datum}}</td>
-        <td>{{i.text}}{{i.mId}}</td>        
+        <td>{{i.text}}<div [innerHTML]="i.partner">!!</div></td>        
       </tr>
     </table>  
   </div>
