--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,22 +1,27 @@
-<div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
-  <button (click)="wocheUmblaettern(-7)"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
-  <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
-  <button (click)="wocheUmblaettern(7)"><i class="fa fa-toggle-right fa-2x" style="color: #3f51b5"></i></button>
+<div *ngIf="mietDay==null;else mietDayContent">
+  <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
+    <button (click)="wocheUmblaettern(-7)"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
+    <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
+    <button (click)="wocheUmblaettern(7)"><i class="fa fa-toggle-right fa-2x" style="color: #3f51b5"></i></button>
+  </div>
+  <div class="row columns">
+    <table>
+      <tr>
+        <th>Mon</th>
+        <th>Die</th>
+        <th>Mit</th>
+        <th>Don</th>
+        <th>Frei</th>
+      </tr>
+      <tr *ngFor="let week of weeks">
+        <td *ngFor="let day of week" [class]="parkplatzColor(day.state)">
+          <div (click)="dayClick(day)">{{day.dayOfYear}}</div>
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
-<div class="row columns">
-  <table>
-    <tr>
-      <th>Mon</th>
-      <th>Die</th>
-      <th>Mit</th>
-      <th>Don</th>
-      <th>Frei</th>
-    </tr>
-    <tr *ngFor="let week of weeks">
-      <td *ngFor="let day of week" [class]="parkplatzColor(day.state)">
-        <div (click)="dayClick(day)">{{day.dayOfYear}}</div>
-      </td>
-    </tr>
-  </table>
-</div>
+<ng-template #mietDayContent>
+  <app-choose-spot [day]="mietDay" (onClose)="chooseSlotClosed()"></app-choose-spot>
+</ng-template>
 
