--- a/src/app/buchungen/buchungen.component.html
+++ b/src/app/buchungen/buchungen.component.html
@@ -28,7 +28,7 @@
 <div class="row columns">
   
     <table>
-      <tr><th>Datum</th><th>Kontakt</th></tr>
+      <tr><th class="number_col">Datum</th><th class="text_col">Kontakt</th></tr>
       <tr *ngFor="let i of buchungsArray">                
         <td>{{i.datum}}</td>
         <td>{{i.text}}<div [innerHTML]="i.partner">!!</div></td>        
