--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="mietDay==null;else mietDayContent">
   <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
-    <button (click)="wocheUmblaettern(-7)"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
+    <button (click)="zurueck()"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
     <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
-    <button (click)="wocheUmblaettern(7)"><i class="fa fa-toggle-right fa-2x" style="color: #3f51b5"></i></button>
+    <button (click)="weiter()"><i class="fa fa-toggle-right fa-2x" style="color: #3f51b5"></i></button>
   </div>
   <div class="row columns">
     <table>
