--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -19,3 +19,10 @@
   color: white;
 }
 
+.gray {
+  background-color: gray;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  color: white;
+}
+
