Funktionen zum Emailversenden v0.1 und in app.module die config auf das neue Projekt geändert

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     <auswertung-component #auswertung>Yo!</auswertung-component>
   </md-tab>
   <md-tab *ngIf="(userAdmin)" label="Nutzerverwaltung">
-    <p>    DUMMY CONTENT </p>
+    <app-verwaltung></app-verwaltung>
   </md-tab>
 </md-tab-group>
 
