--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="mietDay==null;else mietDayContent">
+  <md-input-container>
+    <input/>
+  </md-input-container>
+
   <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
     <button (click)="zurueck()"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
     <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
@@ -14,8 +18,9 @@
         <th>Frei</th>
       </tr>
       <tr *ngFor="let week of weeks">
-        <td *ngFor="let day of week" [class]="parkplatzColor(day.state)">
+        <td *ngFor="let day of week" [class]="parkplatzColor(day.state)" style="text-align: center">
           <div (click)="dayClick(day)">{{formatDate(day)}}</div>
+          <div>{{info(day).length>0?info(day):'&nbsp;'}}</div>
         </td>
       </tr>
     </table>
