--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,4 +1,11 @@
 <div *ngIf="mietDay==null;else mietDayContent">
+
+  <md-input-container>
+    <input mdInput [(ngModel)]="changeMail"/>
+  </md-input-container>
+  <button md-button color="primary" (click)="changeUser()">Change User</button>
+
+
   <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
     <button (click)="zurueck()"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
     <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
