--- a/src/app/choose-spot/choose-spot.component.html
+++ b/src/app/choose-spot/choose-spot.component.html
@@ -1,4 +1,6 @@
-<button md-button (click)="close()">Abbrechen</button>
+<div class="row columns">
+  <button md-button (click)="close()" color="primary">Abbrechen</button>
+</div>
 
 <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
   <h3 style="margin: 5px; color: #3f51b5">
