--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -8,9 +8,9 @@
   </div>
 
   <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
-    <button (click)="zurueck()"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
+    <button (click)="zurueck()"><md-icon class="md-24" color="primary">fast_rewind</md-icon></button>
     <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
-    <button (click)="weiter()"><i class="fa fa-toggle-right fa-2x" style="color: #3f51b5"></i></button>
+    <button (click)="weiter()"><md-icon class="md-24" color="primary">fast_forward</md-icon></button>
   </div>
   <div class="row columns">
     <table>
