--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,42 +22,11 @@
   </md-sidenav>
 
   <div style="height:100vh">
-    <!--User: {{user | json}}-->
     <app-login *ngIf="user==null"></app-login>
     <app-overview *ngIf="user!=null && content=='overview'"></app-overview>
-    <kalender-component *ngIf="content=='kalender'" #kalender>Yo!</kalender-component>
-    <buchungen-component *ngIf="content=='buchungen'" #buchungen></buchungen-component>
-    <auswertung-component *ngIf="content=='auswertung'" #auswertung>Yo!</auswertung-component>
-    <app-verwaltung *ngIf="content=='verwaltung  '"></app-verwaltung>
+    <kalender-component *ngIf="user!=null && content=='kalender'" #kalender>Yo!</kalender-component>
+    <buchungen-component *ngIf="user!=null && content=='buchungen'" #buchungen></buchungen-component>
+    <auswertung-component *ngIf="user!=null && content=='auswertung'" #auswertung>Yo!</auswertung-component>
+    <app-verwaltung *ngIf="user!=null && content=='verwaltung  '"></app-verwaltung>
   </div>
-
-
-  <!--
-    <md-tab-group>
-      <md-tab label="Kalender">
-        <kalender-component #kalender>Yo!</kalender-component>
-      </md-tab>
-      <md-tab label="Übersicht">
-        <app-overview></app-overview>
-      </md-tab>
-      <md-tab label="Buchungen">
-        <buchungen-component #buchungen></buchungen-component>
-      </md-tab>
-      <md-tab *ngIf="(userAdmin)" label="Auswertung">
-        <auswertung-component #auswertung>Yo!</auswertung-component>
-      </md-tab>
-      <md-tab *ngIf="(userAdmin)" label="Nutzerverwaltung">
-        <app-verwaltung></app-verwaltung>
-      </md-tab>
-    </md-tab-group>
-
-  <div class="row columns">
-    <button md-button (click)="login()" *ngIf="!(user | async)?.uid">Anonymous Login</button>
-    <button md-raised-button (click)="logout()" *ngIf="(user | async)?.uid">Logout</button>
-  </div>
-  <div class="centered-content">
-    <p>User: {{userId}} {{userParkId}} {{userAdmin}}</p>
-  </div>
-     -->
-
 </md-sidenav-container>
