typo in appcomponent und verwaltungs-funktionen

--- a/src/app/kalender.component.html
+++ b/src/app/kalender.component.html
@@ -1,5 +1,5 @@
 
-<button (click)="emailTesten()"> Email testen </button>
+<button (click)="emailTesten()"> Test-Email an {{userEmail}} </button>
 <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
   <md-checkbox #nurFreigabenCB (change)="onNurFreigabenChange()" style="margin-right: 5px">Nur verfügbare anzeigen</md-checkbox>
   <button (click)="wocheUmblaettern(-7)"><i class="fa fa-toggle-left fa-2x" style="color: #3f51b5"></i></button>
