--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<md-toolbar color="primary">
-  <button md-icon-button (click)="sidenav.open()">
-    <md-icon class="md-24">menu</md-icon>
-  </button>
-  Parkplatztool
-  <md-toolbar-row *ngIf="user!=null">
-    <span>{{user.email}}</span>
+<md-toolbar color="primary" style="flex-wrap: wrap">
+  <div style="flex:1">
+    <button md-icon-button (click)="sidenav.open()">
+      <md-icon class="md-24">menu</md-icon>
+    </button>
+    Parkplatztool
+  </div>
+  <md-toolbar-row *ngIf="user!=null" style="height:40px">
+    <span style="font-size:medium">{{user.email}}</span>
+    <span style="flex: 1 1 auto;"></span>
     <button md-button (click)="logout()">Logout</button>
   </md-toolbar-row>
 </md-toolbar>
