Änderungen an den Admin Funktionen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   <md-sidenav #sidenav>
     <md-list>
       <md-list-item (click)="setContent('overview')">Übersicht</md-list-item>
-      <md-list-item (click)="setContent('kalender')">Kalender</md-list-item>
+      <md-list-item (click)="setContent('kalender')">Test-Kram</md-list-item>
       <md-list-item (click)="setContent('buchungen')">Buchungen</md-list-item>
       <md-list-item (click)="setContent('auswertung')">Auswertung</md-list-item>
       <md-list-item (click)="setContent('verwaltung')">Verwaltung</md-list-item>
