--- a/src/app/choose-spot/choose-spot.component.html
+++ b/src/app/choose-spot/choose-spot.component.html
@@ -4,7 +4,7 @@
 
 <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
   <h3 style="margin: 5px; color: #3f51b5">
-    Freie Parkpläte am {{datum}}
+    {{chunks!=null?'Freie':'Keine freien'}} Parkpläte am {{datum}}
   </h3></div>
 
 <div class="row columns">
