--- a/src/app/verwaltung/verwaltung.component.html
+++ b/src/app/verwaltung/verwaltung.component.html
@@ -18,18 +18,17 @@
   </div>
 
   <div *ngIf="user.buchungsAdmin" class="row columns">
+  
   <table>
       <tr><th>Email</th><th>Parkplatz</th></tr>
       <tr *ngFor="let i of userArray; let ind = index">                        
         <td>{{i.email}}</td>
         <!--td>{{i.parkId}}</td-->        
         <!--td><button md-raised-button (click)="onApplyButton(ind)">Apply</button></td-->
-        <!--td><input mdInput [(ngModel)]="userArray[ind].parkId" (change)="onParkIdChange(ind)"/></td-->
-        <td>
-          <md-select placeholder={{userArray[ind].parkId}} floatPlaceholder="never" (change)="onSelectOptionChange($event)">
-          <md-option *ngFor="let pid of availableSpaces" [value]="pid">{{pid}}</md-option>
-          </md-select>
-        </td>
+        
+        <!--td><input [attr.id]="ind" value={{userArray[ind].parkId}} (click)="onParkIdChange(ind)"/></td-->
+        <td><input [attr.id]="ind" value={{userArray[ind].parkId}} (change)="onParkIdChange(ind)"/></td>
+        
         
       </tr>
     </table>      
