--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -10,7 +10,7 @@
     <button (click)="zurueck()">
       <md-icon class="md-24" color="primary">fast_rewind</md-icon>
     </button>
-    <h3 [innerHTML]="woche_von_bis" style="margin: 5px; color: #3f51b5">Kalender-Woche</h3>
+    <h3 [innerHTML]="woche_von_bis" style="margin: 5px" color="primary">Kalender-Woche</h3>
     <button (click)="weiter()">
       <md-icon class="md-24" color="primary">fast_forward</md-icon>
     </button>
