--- a/src/app/choose-spot/choose-spot.component.css
+++ b/src/app/choose-spot/choose-spot.component.css
@@ -5,3 +5,20 @@
   color: white;
 }
 
+.close-button-pos {
+  top: auto !important;
+  right: 20px !important;
+  bottom: 10px !important;
+  left: auto !important;
+  position: fixed !important;
+}
+
+.header {
+  margin-top: 25px;
+  margin-bottom: 20px;
+  color: var(--myYellow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
