--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-@@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
 body {
     background-color:#EBEBEB;
     padding-top: 5em;
 }
 * {
-    font-family: 'Raleway';
+    font-family: 'Roboto';
 }
 button {
     background:#008FEF;
