--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,6 +14,7 @@
       <input type="text" [(ngModel)]="user_email">
       <p>Password</p>
       <input type="password" [(ngModel)]="user_password">
+      <div [innerHTML]="innerHtmlString"></div>
     </div>
   </md-tab>
 </md-tab-group>
