--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -26,5 +26,12 @@
   color: white;
 }
 
-
+.magic-button-pos {
+  top: auto !important;
+  right: 20px !important;
+  bottom: 10px !important;
+  left: auto !important;
+  position: fixed !important;
+  background-color: #64cf53;
+}
 
