Benutzer wechseln nur als Benutzungsadmin.

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -3,11 +3,14 @@
     <md-icon>done_all</md-icon>
   </button>
 
-  <div class="row columns">
+  <div class="row columns" *ngIf="this.store.benutzerAdmin">
     <md-input-container style="flex:2">
       <input mdInput [(ngModel)]="changeMail"/>
     </md-input-container>
     <button md-button color="primary" (click)="changeUser()" style="flex:1">Change User</button>
+  </div>
+  <div class="row columns">
+    {{this.store.oververviewUser.email}}
   </div>
 
   <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
