--- a/src/app/kalender.component.html
+++ b/src/app/kalender.component.html
@@ -2,7 +2,7 @@
 <p>Initialbefüllung</p><input name="myFile" type="file"  (change)="handleFileSelect($event)" accept=".csv">
 
 <div class="centered-content" style="margin-top: 10px">
-  Jahresübersicht
+  <h3>Jahresübersicht</h3>
 </div>
 <div class="centered-content">
   <md-select placeholder="Jahr" [(ngModel)]="myYear" (change)="onYearChanged()">    
