--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -14,11 +14,11 @@
   </div>
 
   <div class="centered-content" style="margin-top: 10px; color: var(--myYellow)">
-    <button (click)="zurueck()">
+    <button (click)="zurueck()" style="cursor: pointer">
       <md-icon class="md-24" color="primary">fast_rewind</md-icon>
     </button>
     <h3 [innerHTML]="woche_von_bis" style="margin: 5px" color="primary">Kalender-Woche</h3>
-    <button (click)="weiter()">
+    <button style="cursor: pointer;" (click)="weiter()">
       <md-icon class="md-24" color="primary">fast_forward</md-icon>
     </button>
   </div>
@@ -33,7 +33,7 @@
       </tr>
       <tr *ngFor="let week of weeks">
         <td *ngFor="let day of week" (click)="dayClick(day)" [class]="parkplatzColor(day.state)"
-            style="text-align: center">
+            style="text-align: center;cursor: pointer">
           <div>{{formatDate(day)}}</div>
           <div>{{info(day).length>0?info(day):'&nbsp;'}}</div>
         </td>
